--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   </head>
   <body>
     <div class="clock"></div>
-    <script src="digitalClock.js"></script>
+    <script src="http://cdn.date-fns.org/v1.9.0/date_fns.min.js"></script>
+    <script src="sandbox.js"></script>
   </body>
 </html>
